Fix mob cal widget alignment issues

--- a/client/bundle.css
+++ b/client/bundle.css
@@ -693,7 +693,7 @@ html {
   width: 14rem;
 }
 .w-1\/3 {
-  width: 33.333333%;
+  width: 30%;
 }
 .w-2\/3 {
   width: 66.666667%;
@@ -2313,7 +2313,7 @@ html {
 }
 @media (min-width: 640px) {
   .sm\:w-32 {
-    width: 8rem;
+    width: 10rem;
   }
   .sm\:inset-12 {
     top: 3rem;
@@ -2474,7 +2474,7 @@ html {
     line-height: 1.5rem;
   }
 }
-@media (min-width: 1024px) {
+@media (min-width: 1025px) {
   .lg\:static {
     position: static;
   }
@@ -2686,9 +2686,9 @@ html {
     max-width: 768px;
   }
 }
-@media (min-width: 1024px) {
+@media (min-width: 1025px) {
   .container {
-    max-width: 1024px;
+    max-width: 1025px;
   }
 }
 @media (min-width: 1280px) {
@@ -2817,7 +2817,7 @@ section > h2:first-of-type,
   font-size: 1rem;
   line-height: 1.5rem;
 }
-@media (min-width: 1024px) {
+@media (min-width: 1025px) {
   .nav-label-primary div span i {
     font-size: 1.5rem;
     line-height: 2rem;
@@ -2837,7 +2837,7 @@ section > h2:first-of-type,
   --tw-text-opacity: 1;
   color: rgba(33, 25, 18, var(--tw-text-opacity));
 }
-@media (min-width: 1024px) {
+@media (min-width: 1025px) {
   .user-nav-label {
     font-size: 1rem;
     line-height: 1.5rem;
@@ -2888,7 +2888,7 @@ li#demo-indicator {
   text-transform: uppercase;
   line-height: 2.5rem;
 }
-@media (min-width: 1024px) {
+@media (min-width: 1025px) {
   #current-habit-label-sm > span:first-of-type,
   #subnav .nav-links > li.hoverable a,
   #current-habit-sm span {
@@ -2918,7 +2918,7 @@ li#demo-indicator {
   text-transform: uppercase;
   line-height: 2.5rem;
 }
-@media (min-width: 1024px) {
+@media (min-width: 1025px) {
   .nav-container span:first-child {
     padding-right: 1rem;
     padding-left: 1.5rem;
@@ -3161,13 +3161,15 @@ div.sm-selector-container .domain-selector {
 }
 
 .date-card-wrapper {
-  padding: 2rem 0.5rem;
+  padding: 2rem 0;
 }
 
 @media only screen and (min-width: 400px) {
   .calendar-widget .date-card-wrapper {
-    max-width: 96%;
-    justify-content: center;
+    max-width: 100%;
+  }
+  .date-card-wrapper {
+    padding: 2rem 0.25rem;
   }
 }
 @media only screen and (min-width: 768px) {
@@ -3175,7 +3177,7 @@ div.sm-selector-container .domain-selector {
     grid-column: 2 / span 3;
   }
 }
-@media (min-width: 1024px) {
+@media (min-width: 1025px) {
   div.sm-selector-container {
     display: none;
     height: 2rem;
@@ -3510,7 +3512,7 @@ main#append-habit .button-container.selected {
 #reset-tree {
   bottom: 3.5rem;
 }
-@media (min-width: 1024px) {
+@media (min-width: 1025px) {
   #reset-tree {
     top: 9rem;
     bottom: auto;
@@ -3526,7 +3528,7 @@ main#append-habit .button-container.selected {
   bottom: 0.25rem;
   z-index: 10;
 }
-@media (min-width: 1024px) {
+@media (min-width: 1025px) {
   #collapse-tree {
     top: 6rem;
     bottom: auto;
@@ -3575,7 +3577,7 @@ input[type="date"]:focus {
   --tw-ring-opacity: 1;
   --tw-ring-color: rgba(255, 172, 60, var(--tw-ring-opacity));
 }
-@media (min-width: 1024px) {
+@media (min-width: 1025px) {
   input[type="text"],
   input[type="email"],
   .sm-selector-container select.domain-selector,
@@ -3636,7 +3638,7 @@ input[type="date"] {
     width: 17%;
   }
 }
-@media (min-width: 1024px) {
+@media (min-width: 1025px) {
   .mask-wrapper input[type="date"] {
     line-height: 1rem;
     transform: translateY(9px);
@@ -3644,7 +3646,7 @@ input[type="date"] {
     font-size: 1rem;
   }
 }
-@media (max-width: 1024px) {
+@media (max-width: 1025px) {
   select.domain-selector::-ms-expand {
     display: none;
   }
@@ -3722,7 +3724,7 @@ input[type="date"] {
     margin-left: -0.5rem;
   }
 }
-@media (min-width: 1024px) {
+@media (min-width: 1025px) {
   #append-habit > .sub-section-container {
     margin-left: -0.75rem;
     width: 50%;
@@ -3738,7 +3740,7 @@ input[type="date"] {
     margin-right: 0.5rem;
   }
 }
-@media (min-width: 1024px) {
+@media (min-width: 1025px) {
   #append-habit > .sub-section-container:last-of-type {
     position: fixed;
   }
@@ -3750,7 +3752,7 @@ input[type="date"] {
 #append-habit input[type="date"] {
   padding: 0.5rem;
 }
-@media only screen and (min-width: 1024px) {
+@media only screen and (min-width: 1025px) {
   #append-habit > .sub-section-container:last-of-type {
     width: 48%;
   }
@@ -3771,7 +3773,7 @@ input[type="date"] {
   padding-bottom: 0.5rem;
   padding-left: 1rem;
 }
-@media (min-width: 1024px) {
+@media (min-width: 1025px) {
   .mask-wrapper .user-avatar {
     flex-direction: row-reverse;
     border-radius: 0 0 1.5rem 1.5rem;
@@ -3797,11 +3799,11 @@ input[type="date"] {
 @media (min-width: 640px) {
   .mask-wrapper #responsive-nav {
     height: 3rem;
-    padding-left: 0.75rem;
+    padding-left: 0rem;
     padding-right: 0.75rem;
   }
 }
-@media (min-width: 1024px) {
+@media (min-width: 1025px) {
   .mask-wrapper #responsive-nav {
     justify-content: flex-end;
     padding-left: 0;
@@ -3834,7 +3836,7 @@ input[type="date"] {
     height: 2rem;
   }
 }
-@media (min-width: 1024px) {
+@media (min-width: 1025px) {
   .mask-wrapper #hamburger-wrapper {
     flex: 1 1 auto;
   }
@@ -3882,7 +3884,7 @@ input[type="date"] {
     flex-wrap: wrap;
   }
 }
-@media (min-width: 1024px) {
+@media (min-width: 1025px) {
   .mask-wrapper .wide-nav {
     position: static;
     display: flex;
@@ -3923,7 +3925,7 @@ input[type="date"] {
     padding-left: 0.25rem;
   }
 }
-@media (min-width: 1024px) {
+@media (min-width: 1025px) {
   .mask-wrapper .wide-nav .label-wrapper {
     display: flex;
     width: auto;
@@ -3954,7 +3956,7 @@ input[type="date"] {
     flex-direction: column;
   }
 }
-@media (min-width: 1024px) {
+@media (min-width: 1025px) {
   .nav-label-primary {
     margin-top: -0.75rem;
     margin-right: 0.5rem;
@@ -3966,7 +3968,7 @@ input[type="date"] {
 .nav-label-primary.domain-selector {
   border-radius: 9999px;
 }
-@media (min-width: 1024px) {
+@media (min-width: 1025px) {
   .nav-label-primary.domain-selector {
     border-radius: 1.5rem;
   }
