--- a/client/src/assets/styles/components/MaskHeader.scss
+++ b/client/src/assets/styles/components/MaskHeader.scss
@@ -240,7 +240,7 @@ li.hoverable {
 }
 
 i.cal-date-nav {
-  top: 8.5rem;
+  top: 9.5rem;
   @apply text-3xl md:text-7xl;
 }
 
